--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,11 +82,12 @@ header {
     width: 60px;
     border-radius: 50%;
     margin: 20px 0;
+    opacity: 1;
+    transition: .5s ease;
 }
 
 #logo:hover {
-    width: 58px;
-    border: 1px solid var(--color-primary-darker);
+    opacity: .7;
 }
 
 #menu {
